Idea spi.md: scoped to what SB-Emulators needs today; the rest deferred to ideas of their own
The background-thread runner's SPI half moves into blocking-strategy-session-unlock.md; the
scripted test runner and the epilogue before every UIDL get idea files. Q_eager_check settled: the
SPI stays minimal, the API checks what is runner-neutral eagerly. Q_run_later_derived narrowed to
loom's virtual drainer, which SB-Emulators can reach.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>